# trabalho-02-awsome-team-name

./: .gitignore  README.md
relatorio/: relatorio.tex
workspace/: workspace.cabal
workspace/app/: Main.hs
workspace/src/SL/: AST.hs  Env.hs  Interpreter.hs  Lexer.hs  Parser.hs  Pretty.hs  TypeChecker.hs
workspace/test/: Spec.hs
workspace/test/inputs/: example1_factorial.sl  example2_structs.sl  example3_arrays.sl  example4_math.sl  example5_identity.sl  example6_generics.sl
